update hr report

--- a/HR/templates/employee_ot_hour_records_report.html
+++ b/HR/templates/employee_ot_hour_records_report.html
@@ -43,7 +43,7 @@
             {% for record in ot_hour_records %}
             <tr>
                 <td>{{ record.date }}</td>
-                <td>{{ record.ot_hour }}</td>
+                <td>{{ record.othour }}</td>
             </tr>
             {% endfor %}
         </tbody>
