--- a/static/css/admin_styles.css
+++ b/static/css/admin_styles.css
@@ -64,11 +64,12 @@ fieldset.module{
     overflow-x: scroll;
     border: 1px solid #ccc;
     padding: 10px;
+  
 }
 
 .card{
     background-color: #ebebeb !important;
-    border: 1px solid blue;
+    border: var(--bs-card-border-width) solid var(--bs-card-border-color);
 }
 .card-header{
  background: #d7d7d7 !important;
@@ -76,7 +77,8 @@ fieldset.module{
 }
 
 fieldset.module h2{
-    display: none  !important;
+    /* display: none  !important; */
+    /* background-color: #fff; */
 }
 
 .table > thead {
@@ -107,3 +109,67 @@ fieldset.module h2{
     max-height: 150px !important; /* Adjust the height as per your requirement */
     overflow-y: auto; /* Add a vertical scrollbar if needed */
   }
+
+
+/* History button */
+
+
+  .object-tools li {
+
+    float: right !important;
+
+    margin-top: 15px !important;
+}
+
+
+.gradient-border {
+    --borderWidth: 3px;
+    background: #1d1f20;
+    position: relative;
+    border-radius: var(--borderWidth);
+  }
+  .gradient-border:after {
+    content: "";
+    position: absolute;
+    top: calc(-1 * var(--borderWidth));
+    left: calc(-1 * var(--borderWidth));
+    height: calc(100% + var(--borderWidth) * 2);
+    width: calc(100% + var(--borderWidth) * 2);
+    background: linear-gradient(
+      60deg,
+      #f79533,
+      #f37055,
+      #ef4e7b,
+      #a166ab,
+      #5073b8,
+      #1098ad,
+      #07b39b,
+      #6fba82
+    );
+    border-radius: calc(2 * var(--borderWidth));
+    z-index: -1;
+    animation: animatedgradient 3s ease alternate infinite;
+    background-size: 300% 300%;
+  }
+  
+  @keyframes animatedgradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
+
+
+
+
+
+
+
+
+
