--- a/templates/admin/app_list.html
+++ b/templates/admin/app_list.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load static %}
 {% if app_list  %}
-<div class="accordion w3-light-gray w3-border w3-border-blue 	">
+<div class="accordion w3-white w3-border gradient-border 	">
 
   {% for app in app_list %}
     <button onclick="myFunction('Demo{{ forloop.counter }}')" class="w3-button w3-block w3-left-align" >
@@ -17,7 +17,7 @@
 
     <div id="Demo{{ forloop.counter }}" class="w3-container w3-hide">
       {% for model in app.models %}
-        <div class="model-container w3-block w3-white w3-padding-small w3-border-left w3-border-blue" style="margin-top:5px;">
+        <div class="model-container w3-block card w3-padding-small w3-border-left w3-border-blue" style="margin-top:1px;">
 
           <a class='' href="{{ model.admin_url }}"{% if model.admin_url in request.path|urlencode %} aria-current="page"{% endif %}>{{ model.name }}</a>
 
