update job card report

--- a/HR/templates/job_card.html
+++ b/HR/templates/job_card.html
@@ -16,7 +16,7 @@
                         Absent: {{ total_counts.Absent }}<br>
                         Holiday: {{ total_counts.Holiday }} <br>
                         Leave: {{ total_counts.Leave }}  <br>
-                        Weekend: {{ total_counts.Weeked }}  
+                        Weekend: {{ total_counts.Weekend }}  
                     </div>
                 </div>
             {% endif %}
