--- a/HR/templates/job_card_summary.html
+++ b/HR/templates/job_card_summary.html
@@ -21,6 +21,7 @@
         <th>Absent</th>
         <th>Weekend</th>
         <th>Leave</th>
+        <th>Holiday</th>
       </tr>
     </thead>
     <tbody>
@@ -31,6 +32,7 @@
           <td>{{ summary.Absent }}</td>
           <td>{{ summary.Weekend }}</td>
           <td>{{ summary.Leave }}</td>
+          <td>{{ summary.Holiday }}</td>
         </tr>
       {% endfor %}
     </tbody>
