--- a/HR/templates/job_card.html
+++ b/HR/templates/job_card.html
@@ -35,7 +35,7 @@
                 </thead>        </tr>
 
                 {% for result in results %}
-                    <tr>
+                    <tr style='height:5px'>
                         <td>{{ result.date|date:"d-m-Y" }}</td>
                         <td>{{ result.intime }}</td>
                         <td>{{ result.outtime }}</td>
