--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -13,18 +13,9 @@
     <link href="{% static 'assets/css/style.css' %}"rel="stylesheet">
 
 <style>
-    .cascading-admin-card .admin-up {
-        margin-left: 4%;
-        margin-right: 4%;
-        margin-top: -1.25rem;
-    }
-    .cascading-admin-card .admin-up .fab, .cascading-admin-card .admin-up .far, .cascading-admin-card .admin-up .fas {
-        padding: 1.7rem;
-        font-size: 2rem;
-        color: #fff;
-        text-align: left;
-        border-radius: 3px;
-    }
+
+
+
     select{
         display: initial !important;
     }
@@ -33,6 +24,12 @@
         font-weight: bold;
         border:1px solid black;
     }
+
+
+    #itemsTable tr td {
+      height: 10px !important;
+  } 
+
 </style>
 </head>
 <body>
