--- a/static/css/admin_styles.css
+++ b/static/css/admin_styles.css
@@ -76,9 +76,10 @@ fieldset.module{
 
 }
 
-fieldset.module h2{
+fieldset.module h2
+{
     /* display: none  !important; */
-    /* background-color: #fff; */
+    background-color: #000;
 }
 
 .table > thead {
