--- a/Production/templates/admin/Production/ProductionOrder/change_form.html
+++ b/Production/templates/admin/Production/ProductionOrder/change_form.html
@@ -36,8 +36,8 @@
 {% endblock %}
 {% endif %}
 
-{% block content %}<div id="content-main" class='card  p-4'>
-  <div class="card-header">
+{% block content %}<div id="content-main" class='card  p-4 gradient-border'>
+  <div class="card-header" style="background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 75%) !important;color:white !important;font-weight:bold">
     {{ opts.verbose_name }}
   </div>  
 
@@ -140,13 +140,11 @@
 {% endblock %}
 
 {% block after_related_objects %}{% endblock %}
-
 {% block submit_buttons_bottom %}
 
 {% submit_row %}
 
 {% endblock %}
-
 {% block admin_change_form_document_ready %}
     <script id="django-admin-form-add-constants"
             src="{% static 'admin/js/change_form.js' %}"
