--- a/Report/templates/post_list.html
+++ b/Report/templates/post_list.html
@@ -19,9 +19,9 @@
       <h1>Business Analysis Report </h1>
 
             {% for post in posts %}
-            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4 pb-4">
+            <div class="col-xl-3 col-md-6 mb-xl-0 mb-4 pb-4 ">
         <!-- Card -->
-        <div class="card card-cascade cascading-admin-card">
+        <div class="card card-cascade cascading-admin-card hover-div ">
             <div class="admin-up text-center">
                 {% if post.logo %}
                 <img src="{{ post.logo.url }}" alt="{{ post.title }} Logo" width="50" height="65">
