--- a/templates/basereport.html
+++ b/templates/basereport.html
@@ -30,6 +30,37 @@
       height: 10px !important;
   } 
 
+
+  .hover-div {
+    padding: 20px 20px;
+    text-align: center;
+  
+}
+
+.hover-div {
+    border-top: 1px solid #f8f8f8;
+    background: #f8f8f8;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    margin: 10px 0px;
+ 
+    border-radius: 5px; /* Adjust the border radius value as needed */
+   
+}
+
+.hover-div:hover {
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    transform: translateY(-20px);
+    box-shadow: 0 22px 43px rgba(0, 0, 0, 0.32);
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
+
+
 </style>
 </head>
 <body>
@@ -65,7 +96,7 @@
 
     </div>
   </header><!-- #header -->
-  <section id="intro" class="clearfix">
+  <section id="" class="clearfix">
     <div class="container" data-aos="fade-up">
   {% comment %} <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
