--- a/PrintDocument/templates/PrintDocument/delivery.html
+++ b/PrintDocument/templates/PrintDocument/delivery.html
@@ -5,14 +5,18 @@
 {% load static %}
 
 {% block extra_css %}
-/* Remove border for the last row */
-table tr:last-child {
-  border: 1px solid white !important;
-}
+<style>
+
+    /* Remove border for the last row */
+ table tr:last-child {
+    border: 1px solid white !important;
+  } 
+</style>
+
 {% endblock %}
 {% block content %}
 
-<section class="container section card mb-5 " style="color:black !important">
+<section class="container-fluid section card mb-5 " style="color:black !important">
 
 
 {% if not request.POST %}
@@ -25,7 +29,7 @@ table tr:last-child {
 </div>
 
 <div class="row">
-    <div class="col-md-6 " style=" "">
+    <div class="col-md-4 " style=" ">
         <p>
              <b> Customer Name : </b>  {{ delivery_info.customerName }} 
         </p>
@@ -33,8 +37,8 @@ table tr:last-child {
             <b>Address: </b>  {{ delivery_info.address }}
         </p>
     </div>
-
-    <div class="col-md-6  " style=" "">
+    <div class="col-md-4"></div>
+    <div class="col-md-4  " style=" ">
         <p>
              <b> Created : </b>{{ delivery_info.created| date:"Y-m-d"}}  
         </p>
@@ -55,8 +59,8 @@ table tr:last-child {
     <div class="col-md-4"></div>
 </div>
 <table id="itemsTable"   class="table table-bordered border border-dark" style="color:black !important" >
-    <thead>
-        <tr>
+    <thead >
+        <tr style="border: 1px solid #000 !important;">
             <th>No</th>                 
             <th>Name</th>
             <th>Size</th>
